	  This increases XMP_MAX_FRAMESIZE to 384000. The tick buffers are now
	  allocated using the player-provided rate instead of XMP_MAX_FRAMESIZE:
	  the frame info buffer may also be much smaller than XMP_MAX_FRAMESIZE.
	  In case of existing software misusing the old XMP_MAX_FRAMESIZE, the
	  minimum value for mixer_data->total_size is the old XMP_MAX_FRAMESIZE
	  for now.
	- New function: xmp_set_tempo_factor_relative, to set a relative
	  tempo factor without clobbering the module's tempo factor.
	- New function: xmp_get_tempo_factor, to get the base tempo factor
	  set by loading a module or by xmp_set_tempo_factor.
	- New function: xmp_get_tempo_factor_relative, to get the relative
	  tempo factor set by xmp_start_player/xmp_set_tempo_factor_relative.
	- New API define: XMP_FORMAT_32BIT for xmp_start_player to enable
	  32-bit integer output.
	- New API define: XMP_INST_NO_DEFAULT_PAN for xmp_subinstrument::pan
	- New API defines: XMP_MARK_SKIP and XMP_MARK_END for xmp_module::xxo
	- Add support for Pack-Ice ("Ice!", "ICE!") depacking.
	- Add support for Software Visions DMF (Apocalypse Abyss MOD variant).
	- Replace kernel list helper in iff.c with custom list management
	  to fix numerous otherwise unfixable KallistiOS redefinition warnings.
	- All internal module time/duration calculations are now in doubles
	  (fixes off-by-one module time on final tick of some modules).
	- IFF format loading is now more permissive toward errors in the IFF
	  tag structure, fixing some broken modules that would load for 64-bit
	  Linux builds but not for Windows.
	- Fix sample name, restart position, note 0 loading, and pattern count
	  calculation for Images Music System modules.
	- Fix XM volume effects cxx/dxx accidentally having effects memory.
	- Fix FAR volume and note edge cases (Prescience/aurora.far pos. 16).
	- Fix Real Tracker RTM maximum pattern row count, various effects
	  translations, initial panning and sample panning, sample base volume,